2014-09-05  Alan Lawrence  <alan.lawrence@arm.com>

	* gcc.target/aarch64/scalar_intrinsics.c (*): Replace all
	int{32,16,8}x1_t with int{32,16,8}_t.
	* gcc.target/aarch64/simd/vqdmlalh_lane_s16.c: Likewise.
	* gcc.target/aarch64/simd/vqdmlslh_lane_s16.c: Likewise.
	* gcc.target/aarch64/simd/vqdmullh_lane_s16.c: Likewise.
	* gcc.target/aarch64/simd/vqdmulls_lane_s32.c: Likewise.

2014-09-05  Alan Lawrence  <alan.lawrence@arm.com>

	* gcc.target/aarch64/vget_high_1.c: New test.
	* gcc.target/aarch64/vget_low_1.c: Likewise.

2014-09-05  Alan Lawrence  <alan.lawrence@arm.com>

	* gcc.target/aarch64/simd/int_comparisons.x: New file.
	* gcc.target/aarch64/simd/int_comparisons_1.c: New test.
	* gcc.target/aarch64/simd/int_comparisons_2.c: Ditto.

2014-09-05  Alan Lawrence  <alan.lawrence@arm.com>

	* gcc.target/aarch64/simd/vrbit_1.c: New test.

2014-09-05  Richard Biener  <rguenther@suse.de>

	PR middle-end/63148
	* gcc.dg/vect/pr63148.c: New testcase.
	* c-c++-common/pr19807-1.c: Likewise.
	* g++.dg/tree-ssa/pr19807.C: Adjust.
	* g++.dg/tree-ssa/tmmti-2.C: Remove.

2014-09-05  Bin Cheng  <bin.cheng@arm.com>

	PR target/55701
	* gcc.target/arm/memset-inline-1.c: New test.
	* gcc.target/arm/memset-inline-2.c: New test.
	* gcc.target/arm/memset-inline-3.c: New test.
	* gcc.target/arm/memset-inline-4.c: New test.
	* gcc.target/arm/memset-inline-5.c: New test.
	* gcc.target/arm/memset-inline-6.c: New test.
	* gcc.target/arm/memset-inline-7.c: New test.
	* gcc.target/arm/memset-inline-8.c: New test.
	* gcc.target/arm/memset-inline-9.c: New test.
	* gcc.target/arm/memset-inline-10.c: New test.

2014-09-04  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.c-torture/execute/pr44683.c: Remove dg-options for sh*-*-*.

2014-09-04  Guozhi Wei  <carrot@google.com>

	PR target/62040
	* gcc.target/aarch64/pr62040.c: New test.

2014-09-04  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* gcc.dg/cpp/endif-pedantic2.c: More general options do not
	override specific ones, but specific ones do.
