@@ -1,3 +1,11 @@
+2014-09-05  Marat Zakirov  <m.zakirov@samsung.com>
+
+	* gcc.dg/vect/vect-109.c: Skip predicate added.
+	* gcc.dg/vect/vect-93.c: Test check fixed.
+	* gcc.dg/vect/bb-slp-10.c: Likewise.
+	* lib/target-supports.exp (check_effective_target_arm_vect_no_misalign):
+	Check unaligned feature.
+
 2014-09-05  Alan Lawrence  <alan.lawrence@arm.com>
 
 	* gcc.target/aarch64/scalar_intrinsics.c (*): Replace all
